--- a/kitchen.yml
+++ b/kitchen.yml
@@ -2,6 +2,8 @@
 
 driver:
   name: vagrant
+  network:
+    - [ "forwarded_port", { guest: 80, host: 8080 } ]
 
 provisioner:
   name: ansible_playbook
