--- a/roles/project/defaults/main.yml
+++ b/roles/project/defaults/main.yml
@@ -8,4 +8,7 @@ project:
   pip:
     - 'docker'
   mysql:
-    host: 'localhost'
+    host: '127.0.0.1'
+    database: 'forge'
+    username: 'forge'
+    password: ''
