--- a/roles/project/tasks/deploy.yml
+++ b/roles/project/tasks/deploy.yml
@@ -31,3 +31,6 @@
     recreate: "{{ 'yes' if task.changed else 'no' }}"
     env:
       DB_HOST: '{{ project.mysql.host }}'
+      DB_DATABASE: '{{ project.mysql.database }}'
+      DB_USERNAME: '{{ project.mysql.username }}'
+      DB_PASSWORD: '{{ project.mysql.password }}'
