nginx role and related configuration

--- a/roles/project/defaults/main.yml
+++ b/roles/project/defaults/main.yml
@@ -9,3 +9,6 @@ project:
     database: 'forge'
     username: 'forge'
     password: ''
+  domain: 'test.timebook.local'
+  application:
+    prefix: '/application'
